REGRESSION (290899@main): Fix WTF::RetainPtrType when using `id` type <https://bugs.webkit.org/show_bug.cgi?id=291276> <rdar://148273952>

Reviewed by Ryosuke Niwa.

* Source/WTF/wtf/RetainPtr.h:
(WTF::RetainPtrType):
- RetainPtr<RetainPtrType<id>> should be the same as RetainPtr<id>.
  This fixes the regression in 290899@main.

* Tools/TestWebKitAPI/Tests/WTF/cf/RetainPtr.cpp:
(TestWebKitAPI::TEST(RETAIN_PTR_TEST_NAME, RetainPtrType)):
- Add tests for WTF::RetainPtrType.
* Tools/TestWebKitAPI/Tests/WTF/cocoa/TypeCastsCocoa.mm:
(TestWebKitAPI::TEST(TypeCastsCocoa, dynamic_objc_cast_RetainPtr)):
- Restore use of `auto` when assigning the return value of adoptNS<id>().
  This partially backs out changes from 291650@main and 293007@main to
  restore the code to its previous state.
* Tools/TestWebKitAPI/Tests/WTF/ns/RetainPtr.mm:
(TestWebKitAPI::TEST(RETAIN_PTR_TEST_NAME, RetainPtrType)):
- Add tests for WTF::RetainPtrType.

Canonical link: https://commits.webkit.org/293440@main